# CJWASM

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  FIXES_SUMMARY.md  LICENSE  README.md  README_EN.md  claude.md
.claude/agents/: full-test-runner.md
benches/: compile_bench.rs  report.html
docs/: FINAL_SUMMARY.md  IMPLEMENTATION_PROGRESS.md  STDLIB_COMPLETION_REPORT.md  codegen_compare.md  codegen_fix_summary.md  coverage.md  next_steps.md  refactor_cjc_reference.md  spec.md  stdlib_fix_progress.md
examples/: advanced.cj  cjson_demo.cj  class.cj  control_flow.cj  enum.cj  error_handling.cj  for_in_and_guards.cj  functions.cj  generic.cj  generic_advanced.cj  hello.cj  inheritance.cj  interface.cj  literals.cj  loop_control.cj  macro_basic.cj  math.cj  memory_management.cj  methods.cj  modules.cj  modules.cj.bak  operators.cj  p2_features.cj  p3_option_tuple.cj  p6_new_features.cj  patterns.cj  phase2_types.cj  phase5_interface.cj  phase6_error_module.cj  pow.cj  println.cj  showcase_demo.cj  std_api_full_demo.cj  std_api_smoke.cj  std_arraylist_demo.cj  std_basic_test.cj  std_collection_demo.cj  std_features.cj  std_io_demo.cj  std_io_simple.cj  (+7 more)
scripts/: analyze_gaps.sh  benchmark.sh  cjwasm_cjc_shim.sh  conformance_diff.sh  conformance_post_stats.py  coverage.sh  extract_cjc_ast.sh  extract_cjc_parser_methods.sh  run_examples.sh  run_test.sh  std_test.sh  system_test.sh
src/: cjpm.rs  lib.rs  main.rs  memory.rs  pipeline.rs
stdlib_overlay/: env.cj  fs.cj  math.cj  random.cj  runtime.cj  time.cj
tests/: compile_test.rs  l1_std_test.rs
(+171 files in other folders)
