[package]
name = "cjwasm"
version = "0.1.0"
edition = "2021"

[dependencies]
logos = "0.14"           # 词法分析
wasm-encoder = "0.220"   # WASM 代码生成
thiserror = "2.0"        # 错误处理
ariadne = "0.4"          # 错误报告（漂亮的诊断信息）
toml = "0.8"             # cjpm.toml 配置文件解析
serde = { version = "1.0", features = ["derive"] }  # 序列化/反序列化

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compile_bench"
harness = false
